--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <title>Matt Smith - web developer, mobile strategist, and front-end astronaut</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Matt Smith is a forward-thinking web developer based in Portland, Maine who builds web applications to deliver engaging user experiences. He recognizes that users have diverse backgrounds and non-desktop expectations, and applies mobile-first principles to craft sophisticated user interfaces to accommodate different needs. As a usability expert, Matt is also able to analyze, strategize, and come up with conversion-driven tactics that meet business objectives with effective technical solutions. Matt believes in giving back to the web community and is an active contributor to several open-source projects. His most popular projects on GitHub, 'CSS Protips' and 'jQuery Tips Everyone Should Know', have been favorited by thousands of web professionals. As a developer advocate, Matt provides professional and technical guidance and strongly promotes emerging technologies with a holistic view.">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:description" content="Matt Smith is a web developer based in Portland, Maine who builds web applications to deliver engaging user experiences.">
+<meta property="og:image" content="http://allthingssmitty.com/images/avatar@2x.png">
+<meta name="twitter:image" content="http://allthingssmitty.com/images/avatar@2x.png">
+<meta name="twitter:creator" content="@AllThingsSmitty">
+<meta name="twitter:url" content="https://allthingssmitty.com">
+<meta name="twitter:title" content="Matt Smith">
 <!-- inline critical path CSS -->
 <style>
   *,:after,:before,html{box-sizing:border-box}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body,div,html{margin:0;padding:0}h1{font-weight:400}@font-face{font-family:Slabo27px;src:url(css/fonts/Slabo27px-Regular.woff2) format("woff2"),url(css/fonts/Slabo27px-Regular.woff) format("woff")}:root{font-size:calc(1vw + 1vh + .25vmin)}body,html{height:100%;margin:0}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font:1em/1.25 sans-serif}.fonts-loaded body{font-family:Slabo27px,sans-serif}main{margin:0 auto;text-align:center}h1{font-size:4em;line-height:1em;margin:0}hr{background:#ccc;border:none;height:1px}.icons{display:inline-table;font-size:2.5em;padding:.25em 0}.fa,.icons li{display:inline-block}.icons ul{margin:0;padding:0}.icons li{height:1.15em;list-style:none;margin:0 .25em;width:1.15em}.icons li:first-child{margin-left:0}.icons li:last-child{margin-right:0}.icons a{color:inherit}.icons a span:last-child{clip:rect(1px,1px,1px,1px);max-height:1px;max-width:1px;overflow:hidden;position:absolute}@media only screen and (max-width:800px){body{font-size:1.3em;line-height:1.6rem}}@media only screen and (max-width:500px){body{font-size:1.15em;line-height:1.4rem}}@media only screen and (min-width:800px){[class^=tooltip]{position:relative}[class^=tooltip]:after{background:#2196f3;border-radius:3px;color:#fff;content:attr(data-tooltip);font-size:1rem;left:50%;opacity:0;padding:.25em .5em;position:absolute;top:3em;transform:translateX(-50%) translateY(-.25em);white-space:nowrap;z-index:2}.tooltip:before{content:"";height:0;left:50%;opacity:0;position:absolute;transform:translateX(-50%) translateY(-2px);width:5em;z-index:3}}@font-face{font-family:FontAwesome;src:url(third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0) format("woff2"),url(third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0) format("woff");font-weight:400;font-style:normal}.fa{font:normal normal normal 14px/1 FontAwesome;font-size:inherit;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;text-rendering:auto}.fa-twitter:before{content:"\f099"}.fa-github:before{content:"\f09b"}.fa-linkedin:before{content:"\f0e1"}.fa-codepen:before{content:"\f1cb"}.fa-google-plus:before{content:"\f0d5";}
@@ -26,7 +33,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="manifest.json">
 <meta name="msapplication-TileColor" content="#2196f3">
 <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#f1f2f3">
