--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ permalink: 404.html
 ---
 
 <div class="page">
-  <h3 class="page-title">Page not found <span role="img" aria-label="face screaming in fear">&#x1f631;</span></h3>
-  <p class="intro">Whoops! The page you're looking for was misplaced or no longer exists. Not to worry, there's <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
+  <h2 class="page-title">Whoops! <span role="img" aria-label="confused face">&#x1F61F;</span></h2>
+  <p class="intro">It looks like the page you're looking for was misplaced or no longer exists. Not to worry, there's <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
 </div>
