--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ title: Home
       <div class="flow">
         <p>{{ post.content | strip_html | truncatewords:50 }}</p>
         <p><a href="{{ post.url }}" aria-label="Read more of '{{ post.title }}'">Read more</a></p>
+        {% include tags.html %}
       </div>
     </div>
     {% if forloop.last == false %}<div class="border-rule"></div>{% endif %}
