--- a/404.html
+++ b/404.html
@@ -8,5 +8,8 @@ permalink: 404.html
   <header class="page-header">
     <h2 class="page-header__title">Whoops! <span role="img" aria-label="emoji face with monocle">&#x1F9D0;</span></h2>
   </header>
-  <p>It looks like the page you want isn't here. Not to worry, there's <a href="{{ site.data.org.baseurl }}/">more good content</a> to check out.</p>
+  <p>
+    Looks like that page isn't here. Not to worry, there's
+    <a href="{{ site.data.org.baseurl }}/">more good content</a> waiting for you.
+  </p>
 </div>
